--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.12.0",
+    "react-upload-gallery": "0.0.3",
     "reactstrap": "^8.1.1",
     "simple-line-icons": "^2.4.1"
   },
