--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
+    "rc-slider": "^8.7.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
     "react-chartjs-2": "^2.8.0",
