--- a/package.json
+++ b/package.json
@@ -32,15 +32,17 @@
     "react-app-polyfill": "^1.0.4",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-image-gallery": "^0.9.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.12.0",
     "react-upload-gallery": "0.0.3",
     "reactstrap": "^8.1.1",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "video-react": "^0.14.1"
   },
   "devDependencies": {
-    "react-scripts": "^3.2.0"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
