WIP: support video

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "core-js": "^3.4.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "filepond": "^4.9.2",
+    "filepond-plugin-image-exif-orientation": "^1.0.6",
+    "filepond-plugin-image-preview": "^4.5.0",
     "flag-icon-css": "^3.4.5",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.13.0",
@@ -32,6 +35,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-filepond": "^7.0.1",
     "react-image-gallery": "^0.9.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
