--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "levector-frontend",
   "version": "1.0.0",
   "description": "Levector frontend",
-  "author": "Benito Valarezo, Andrea Cáceres, Fabricio Orrala",
-  "homepage": "https://github.com/fzzio/levector-frontend#readme",
+  "author": "Benito Valarezo, Andrea Cáceres, Fabricio Orrala, Andrea Obando",
   "copyright": "Levector",
   "license": "MIT",
   "private": true,
@@ -14,8 +13,11 @@
   "dependencies": {
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
-    "@coreui/icons": "0.3.0",
+    "@coreui/icons": "^1.0.1",
     "@coreui/react": "^2.5.4",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^8.1.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
@@ -30,23 +32,21 @@
     "font-awesome": "^4.7.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
-    "rc-slider": "^8.7.1",
+    "rc-slider": "^9.2.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
     "react-filepond": "^7.0.1",
-    "react-image-gallery": "^0.9.1",
+    "react-image-gallery": "^1.0.6",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
     "react-test-renderer": "^16.12.0",
-    "react-upload-gallery": "0.0.3",
+    "react-upload-gallery": "0.0.4",
     "reactstrap": "^8.1.1",
     "simple-line-icons": "^2.4.1",
     "video-react": "^0.14.1"
-  },
-  "devDependencies": {
-    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,12 +62,18 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 9",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
