--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.12.0",
     "react-filepond": "^7.0.1",
     "react-image-gallery": "^1.0.6",
+    "react-redux": "^7.1.3",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
